# ens-referrals

./: .env.example  .gitmodules  CLAUDE.md  LICENSE  README.md  foundry.toml  remappings.txt
.github/workflows/: test.yml  test_circuit.yml
app/axiom/: registration.circuit.ts  renewal.circuit.ts
broadcast/Deploy.s.sol/1/: run-latest.json
broadcast/Deploy.s.sol/11155111/: run-1760905833736.json
circuit/: Cargo.toml
circuit/data/: input.py  registration_input.json  renewal_input.json
circuit/src/: lib.rs  registration.rs  renewal.rs
circuit/src/tests/: mod.rs  registration.rs  renewal.rs  utils.rs
script/: Deploy.s.sol
src/: ENSReferrals.sol  IRegistrarRenewalWithReferral.sol  IWrappedEthRegistrarController.sol  SimpleWrappedRegistrarRenewal.sol  UniversalRegistrarRenewalWithAdditionalReferrerEvent.sol  UniversalRegistrarRenewalWithOriginalReferrerEvent.sol  UniversalRegistrarRenewalWithReferrer.sol  UniversalRegistrarRenewalWithSimpleReferrerEvent.sol  WrappedRegistrarRenewalWithReferral.sol
test/: ENSReferrals.t.sol  ReferralTest.t.sol  UniversalRegistrarRenewalWithReferrer.t.sol
