[package]
name = "circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axiom-circuit = { git = "https://github.com/axiom-crypto/axiom-sdk-rs.git", rev = "e7cb01e" }
axiom-sdk = { git = "https://github.com/axiom-crypto/axiom-sdk-rs.git", rev = "e7cb01e" }
env_logger = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"

[profile.dev]
opt-level = 3
debug = 2              # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = true
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
# `codegen-units = 1` can lead to WORSE performance - always bench to find best profile for your machine!
codegen-units = 1
panic = "abort"
incremental = false

